# check-updates

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release-build.yaml  release.yaml
crates/check-updates/: Cargo.toml
crates/check-updates-cli/: Cargo.toml
crates/check-updates-cli/src/: cli.rs  interactive.rs  lib.rs  update.rs  version.rs
crates/check-updates/src/: lib.rs  package.rs  registry.rs
crates/check-updates/src/registry/cargo/: fetch.rs  mod.rs  resolve.rs  update.rs
crates/check-updates/src/registry/npm/: mod.rs
examples/: cargo.rs
examples/cargo/: README.md
examples/cargo/single-package-demo/: Cargo.toml
examples/cargo/single-package-demo/local-support/: Cargo.toml
examples/cargo/single-package-demo/local-support/src/: lib.rs
examples/cargo/single-package-demo/src/: lib.rs
examples/cargo/workspace-demo/: Cargo.toml
examples/cargo/workspace-demo/crates/app/: Cargo.toml
examples/cargo/workspace-demo/crates/app/src/: lib.rs
examples/cargo/workspace-demo/crates/server/: Cargo.toml
examples/cargo/workspace-demo/crates/server/src/: lib.rs
examples/cargo/workspace-demo/crates/tools/: Cargo.toml
examples/cargo/workspace-demo/crates/tools/src/: lib.rs
