[workspace]
resolver="3"
members=["crates/*"]
default-members=["crates/check-updates-cli"]

[workspace.package]
edition="2024"
rust-version="1.93"
version="0.1.0"
repository="github.com/explodingcamera/check-updates"
authors=["Henry Gressmann <crates@henrygressmann.de>"]
license="MIT OR Apache-2.0"

[workspace.dependencies]
check-updates={path="crates/check-updates"}

cargo_metadata="0.23"
crates-index="3.13"
curl={version="0.4", features=["http2"]}
http="1"
purl="0.1"
semver="1.0"
jiff="0.2"
log="0.4"
env_logger="0.11"
thiserror="2.0"

dialoguer="0.12"
clap={version="4.5", features=["derive", "color", "unstable-styles"]}
toml_edit="0.25"
indicatif="0.18"
console={version="0.16", default-features=false}
