[package]
name="check-updates-cli"
version.workspace=true
authors.workspace=true
edition.workspace=true
license.workspace=true
repository.workspace=true

[[bin]]
name="cargo-check-updates"
path="src/bin/cargo-check-updates.rs"

[[bin]]
name="check-updates"
path="src/bin/check-updates.rs"

[dependencies]
check-updates.workspace=true
dialoguer.workspace=true
clap.workspace=true
toml_edit.workspace=true
indicatif.workspace=true
console.workspace=true
log.workspace=true
env_logger.workspace=true
