[package]
name="check-updates-cli"
version.workspace=true
authors.workspace=true
edition.workspace=true
license.workspace=true
repository.workspace=true
default-run="check-updates"
description="CLI for checking for updates to your Cargo dependencies"

[[bin]]
name="cargo-check-updates"
path="src/bin/cargo-check-updates.rs"

[[bin]]
name="check-updates"
path="src/bin/check-updates.rs"

[dependencies]
check-updates.workspace=true
clap.workspace=true
indicatif.workspace=true
console.workspace=true
log.workspace=true
env_logger.workspace=true
semver.workspace=true
ctrlc.workspace=true
