[package]
name="check-updates-cli"
version.workspace=true
authors.workspace=true
edition.workspace=true
license.workspace=true
repository.workspace=true
default-run="check-updates"
description="CLI for checking for updates to your Cargo dependencies"
readme="../../README.md"

[[bin]]
name="cargo-check-updates"
path="src/bin/cargo-check-updates.rs"

[[bin]]
name="check-updates"
path="src/bin/check-updates.rs"

[dependencies]
check-updates.workspace=true
clap_complete.workspace=true
clap.workspace=true
indicatif.workspace=true
console.workspace=true
log.workspace=true
env_logger.workspace=true
semver.workspace=true
ctrlc.workspace=true
tokio.workspace=true

[package.metadata.binstall]
bin-dir="{ bin }{ binary-ext }"
pkg-url="{ repo }/releases/download/v{ version }/check-updates-amd64-linux.tar.xz"
pkg-fmt="txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url="{ repo }/releases/download/v{ version }/check-updates-amd64-linux.tar.xz"
pkg-fmt="txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-url="{ repo }/releases/download/v{ version }/check-updates-amd64-windows.zip"
pkg-fmt="zip"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url="{ repo }/releases/download/v{ version }/check-updates-arm64-linux.tar.xz"
pkg-fmt="txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url="{ repo }/releases/download/v{ version }/check-updates-arm64-darwin.tar.xz"
pkg-fmt="txz"
