[package]
name="check-updates"
version="0.1.0-alpha.0"
authors.workspace=true
edition.workspace=true
license.workspace=true
repository.workspace=true

[dependencies]
cargo_metadata.workspace=true
crates-index.workspace=true
curl.workspace=true
http.workspace=true
purl.workspace=true
semver.workspace=true
log.workspace=true
thiserror.workspace=true
toml_edit.workspace=true
disponent.workspace=true
