[package]
name="check-updates"
version.workspace=true
authors.workspace=true
edition.workspace=true
license.workspace=true
repository.workspace=true
description="CLI for checking for updates to your Cargo dependencies"
readme="../../README.md"

[dependencies]
cargo_metadata.workspace=true
crates-index.workspace=true
curl.workspace=true
http.workspace=true
purl.workspace=true
semver.workspace=true
log.workspace=true
thiserror.workspace=true
toml_edit.workspace=true
disponent.workspace=true
