[package]
name = "single-package-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.44"
bytes = "1.1.0"
chrono = "0.4.20"
clap = "4.0.0"
console = "0.15.0"
futures = "0.3.21"
indexmap = "1.8.0"
itertools = "0.10.0"
once_cell = "1.9.0"
parking_lot = "0.12.0"
rand = "0.8.0"
rayon = "1.5.0"
regex = "1.5.0"
reqwest = "0.11.0"
semver = "1.0.0"
serde = "1.0.100"
serde_json = "1.0.60"
smallvec = "1.8.0"
thiserror = "1.0.20"
tokio = "1.18.0"
toml_edit = "0.19.0"
tracing = "0.1.0"
url = "2.2.0"
uuid = "1.1.0"
time = "0.3.20"
async-trait = "0.1.56"
pin-project-lite = "0.2.8"
rand07 = { package = "rand", version = "0.7.3" }
regex_old = { package = "regex", version = "1.4.0" }
itoa_git = { package = "itoa", git = "https://github.com/dtolnay/itoa", branch = "master" }
local_support = { path = "local-support" }
