[workspace]
resolver="2"
members=["crates/app", "crates/server", "crates/tools"]

[workspace.dependencies]
anyhow="1.0.44"
clap="4.0.0"
console="0.15.0"
itertools="0.10.0"
rand="0.8.0"
regex="1.5.0"
reqwest="0.11.0"
serde="1.0.100"
serde_json="1.0.60"
thiserror="1.0.20"
tokio="1.18.0"
toml_edit="0.19.0"
tracing="0.1.0"
url="2.2.0"
