[workspace]
resolver="2"
members=["crates/app", "crates/server", "crates/tools"]

[workspace.dependencies]
ahash="0.7.0"
anyhow="^1.0.44"
clap=">=4.0.0, <5.0.0"
console="0.15"
itertools="^0.10"
rand=">=0.8, <0.9"
regex="1.5"
reqwest="^0.11.0"
serde=">=1.0.100, <2.0.0"
serde_json="1.0"
thiserror="^1.0.20"
tokio="1.18"
toml_edit=">=0.19, <0.20"
tracing="^0.1.0"
url="2.2"
