[package]
name = "workspace-demo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
itertools.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml_edit.workspace = true
tracing.workspace = true
clap = "4.3.0"
serde_json = "1.0.89"
tokio-util = "0.7.4"
rand08 = { package = "rand", version = "0.8.5" }
