[package]
name = "workspace-demo-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
console.workspace = true
itertools.workspace = true
rand.workspace = true
serde_json.workspace = true
url.workspace = true
regex = "1.9.0"
reqwest = "0.11.18"
time = "0.3.20"
rand07 = { package = "rand", version = "0.7.3" }
